重构 RAG 架构为垂直领域专用，并修复核心稳定性问题。升级 LangChain4j/ES 依赖，修复 SSE 流式权限上下文丢失，优化语义缓存逻辑，增强前端交互体验。